# bulloak

./: Cargo.toml  README.md
crates/bulloak/: Cargo.toml
crates/bulloak/benches/: emit_noir.rs  emit_rust.rs
crates/bulloak/src/: check.rs  cli.rs  scaffold.rs
crates/bulloak/tests/: check_noir.rs  check_rust.rs  scaffold_noir.rs  scaffold_rust.rs
crates/bulloak/tests/check_noir/: basic_test.nr  missing_helper_test.nr  missing_test.tree  missing_test_test.nr  no_helpers.tree  no_helpers_test.nr  unexpected_should_fail.tree  unexpected_should_fail_test.nr
crates/bulloak/tests/check_rust/: basic.tree  basic_test.rs  missing_helper.tree  missing_helper_test.rs  missing_test_test.rs  no_helpers_test.rs  unexpected_should_panic_test.rs
crates/bulloak/tests/scaffold_noir/: basic.tree  basic_test.nr  complex_test.nr  disambiguation_test.nr  duplicated_condition_test.nr  format_descriptions_test.nr  nested.tree  nested_test.nr  no_helpers.tree  no_helpers_test.nr  removes_invalid_title_chars_test.nr  with_panic.tree  (+4 more)
crates/noir/: Cargo.toml
crates/noir/src/: config.rs  constants.rs  lib.rs  utils.rs
crates/noir/tests/: debug_parser.rs
crates/rust/: Cargo.toml  README.md
crates/rust/src/: config.rs  constants.rs  lib.rs  utils.rs
crates/rust/src/check/: mod.rs  violation.rs
crates/rust/src/check/rules/: mod.rs  structural_match.rs
crates/rust/src/hir/: hir.rs  mod.rs  translator.rs  visitor.rs
crates/rust/src/rust/: mod.rs  parser.rs
crates/rust/src/scaffold/: comment.rs  emitter.rs  generator.rs  mod.rs
src/syntax/: ast.rs  parser.rs  tokenizer.rs
(+24 files in other folders)
