[package]
name = "bulloak-rust"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
readme = "./README.md"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
bulloak-syntax.workspace = true

anyhow.workspace = true
thiserror.workspace = true
syn = { version = "2.0", features = ["full", "parsing", "visit"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
pretty_assertions.workspace = true
indoc = "2.0.5"

[lints]
workspace = true
